adding debug-toolbar, django-extentions to the demo

--- a/account_chooser_demo/demo/templates/demo/index.html
+++ b/account_chooser_demo/demo/templates/demo/index.html
@@ -1,1 +1,7 @@
-{% extends "registration/base_registration.html" %}
+{% extends "base.html" %}
+
+{% block title %}Demo Account Chooser{% endblock %}
+{% block body_class %}{{ block.super }} demo{% endblock %}
+{% block account_chooser %}
+<script type="text/javascript" src="https://www.accountchooser.com/ac.js" > </script>
+{% endblock %}
