--- a/account_chooser_demo/demo/templates/base.html
+++ b/account_chooser_demo/demo/templates/base.html
@@ -3,10 +3,9 @@
 
 <html lang="en">
     <head>
-        <script type="text/javascript"
-        src="https://www.accountchooser.com/ac.js" />
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>{% block title %}{% endblock %}</title>
+        {% block account_chooser %}{% endblock %}
     </head>
     <body id="{% block body_id %}{% endblock %}" class="{% block body_class %}{% endblock %}">
         <div id="body">
