--- a/account_chooser_demo/demo/templates/demo/twitter_signup.html
+++ b/account_chooser_demo/demo/templates/demo/twitter_signup.html
@@ -1,1 +1,80 @@
 <a href="/demo/twitter_auth">signup with twitter</a>
+{# TODO: move the CLIENT_ID 	to the settings file #}
+<a href="">
+<span id="signinButton">
+  <span
+    class="g-signin"
+    data-callback="signinCallback"
+    data-clientid="308413983615.apps.googleusercontent.com"
+    data-cookiepolicy="single_host_origin"
+    data-requestvisibleactions="http://schemas.google.com/AddActivity"
+    data-scope="https://www.googleapis.com/auth/plus.login">
+  </span>
+</span>
+</a>
+
+ <!-- Place this asynchronous JavaScript just before your </body> tag -->
+  <script type="text/javascript">
+  (function() {
+    var po = document.createElement('script');
+    po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/client:plusone.js?onload=render';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(po, s);
+  })();
+
+	function signinCallback(authResult) {
+	  if (authResult['access_token']) {
+	    alert("success")
+	    // Successfully authorized
+	    // Hide the sign-in button now that the user is authorized, for example:
+	    document.getElementById('signinButton').setAttribute('style', 'display: none');
+	  } else if (authResult['error']) {
+	  	alert("error");
+	    // There was an error.
+	    // Possible error codes:
+	    //   "access_denied" - User denied access to your app
+	    //   "immediate_failed" - Could not automatially log in the user
+	    // console.log('There was an error: ' + authResult['error']);
+	  }
+	}
+
+  function render() {
+    gapi.signin.render('customBtn', {
+      //'callback': 'signinCallback',
+      'clientid': '841077041629.apps.googleusercontent.com',
+      'cookiepolicy': 'single_host_origin',
+      'requestvisibleactions': 'http://schemas.google.com/AddActivity',
+      'scope': 'https://www.googleapis.com/auth/plus.login'
+    });
+  }
+  </script>
+  <style type="text/css">
+    #customBtn {
+      display: inline-block;
+      background: #cc3732;
+      color: white;
+      width: 175px;
+      border-radius: 5px;
+    }
+    #customBtn:hover {
+      background: #e74b37;
+      cursor: hand;
+    }
+    span.label {
+      font-weight: bold;
+    }
+    span.icon {
+      background: url('/+/images/branding/btn_red_32.png') transparent 10px 50% no-repeat;
+      display: inline-block;
+      vertical-align: middle;
+      width: 40px;
+      height: 40px;
+    }
+    span.buttonText {
+      display: inline-block;
+      vertical-align: middle;
+      padding-left: 40px;
+      padding-right: 40px;
+    }
+  </style>
