--- a/account_chooser_demo/demo/templates/demo/yah.html
+++ b/account_chooser_demo/demo/templates/demo/yah.html
@@ -1,1 +1,13 @@
 <h2>thanks to allah every thing is ok now </h2>
+
+{% block bottomheader%}
+
+<script type="text/javascript"        
+     src="https://www.accountchooser.com/ac.js" ></script>
+<script type="text/javascript">
+  accountchooser.CONFIG.storeAccount = {
+    email: "a.aboelllef@gmail.com",
+    displayName: "Ahmed aboelllef",
+    photoUrl: "https://example.com/nikhil_corlett.jpg"
+    providerId: "identity.example.com" };</script>
+{% endblock%}
