--- a/account_chooser_demo/demo/templates/demo/index.html
+++ b/account_chooser_demo/demo/templates/demo/index.html
@@ -5,3 +5,7 @@
 {% block account_chooser %}
 <script type="text/javascript" src="https://www.accountchooser.com/ac.js" > </script>
 {% endblock %}
+
+{%block body%}
+ajn;fsdjnfajsdnfasd
+{% endblock %}
