--- a/account_chooser_demo/demo/templates/demo/index.html
+++ b/account_chooser_demo/demo/templates/demo/index.html
@@ -3,100 +3,23 @@
 {% block title %}Demo Account Chooser{% endblock %}
 {% block body_class %}{{ block.super }} demo{% endblock %}
 {% block account_chooser %}
-<script type="text/javascript" src="https://www.accountchooser.com/ac.js" > </script>
+<script type="text/javascript" src="https://www.accountchooser.com/ac.js" ></script>
 {% endblock %}
 
 {%block body%}
-<a href="/demo/twitter_auth">signup with twitter</a>
-<h3>
-	the steps are 
-</h3>
-<ol>
-	<li>
-		user press sign-up with twitter
-	</li>
-	<li>
-		our python code request access token form twitter and redirect the user to twitter site to authorize the app
-	</li>
-	<li>
-		after successful authorization twitter redirect us the callback url we configured in the twitter app 
-	</li>
-	<li>
-		twitter sends this user access token and access secret with the redirect and we should somehow store them to build api object for the coming visit of this user 
-	</li>
-</ol>
-
-<hr>
-    <span id="signinButton">
-  <span
-    class="g-signin"
-    data-callback="signinCallback"
-    data-clientid="308413983615.apps.googleusercontent.com"
-    data-cookiepolicy="single_host_origin"
-    data-requestvisibleactions="http://schemas.google.com/AddActivity"
-    data-scope="https://www.googleapis.com/auth/plus.login">
-  </span>
-</span>
-<a href="#" id="revokeButton" onclick="disconnectUser()" >sign out</a>
-
-<h3>
-	the steps are 
-</h3>
-<ol>
-	<li>
-		after page load js automatically check if you are authorized this app before
-	</li>
-	<li>
-		if the user authorize this app. before it return the auth. object contain access id and access token
-	</li>
-	<li>
-		you should send Ajax. request to your app. and build the user session with it 
-	</li>
-	<li>
-		if the user did not authorize this app. before id show that user is not authorized yet 
-	</li>
-	<li>
-		when the user press sign in with google it gives a pop up contain the page to authenticate app
-	</li>
-</ol>
-
-<h5> notes : </h5>
+<h1>THIS IS INDEX PAGE</h1>
+<h2>LIST OF urls</h2>
 <ul>
-	<li> 
-		access token in twitter do not expire unless the user revoke access to user app
-		so your better to save user access token and access secret in you system and build the auth  object completely form you server with out any redirects to twitter after the first time 
-	</li>
-	<li>
-		access token in gplus expire every hour but it regenerate it self with the first request after expiration 
-	</li>
+	{% for single_url in url_list %}
+		{% if 'admin' not in single_url %}
+			{% if '<' not in single_url%}
+			<li><a href="{{single_url}}"> {{single_url}} </a></li>
+			{% else %}
+			<li><a href="#"> {{single_url}} </a></li>
+			{% endif %}
+		{% endif %}
+{% endfor %}
 </ul>
 
-
-    <script type="text/javascript">
-      (function() {
-       var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-       po.src = 'https://apis.google.com/js/client:plusone.js';
-       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-     })();
-     function signinCallback(authResult) {
-		  if (authResult['access_token']) {
-
-
-		    // uncomment the next line to hide signin with google after authorize user 
-		    // document.getElementById('signinButton').setAttribute('style', 'display: none');
-		    alert("success");
-
-
-		  } else if (authResult['error']) {
-		    // There was an error.
-		    // Possible error codes:
-		    //   "access_denied" - User denied access to your app
-		    //   "immediate_failed" - Could not automatially log in the user
-		    // console.log('There was an error: ' + authResult['error']);
-		    // alert("error");
-		    alert("not authorized yet press 'login with twitter' to signin ");
-		  }
-		}
-    </script>
 
 {% endblock %}
