--- a/account_chooser_demo/demo/templates/registration/login.html
+++ b/account_chooser_demo/demo/templates/registration/login.html
@@ -39,7 +39,7 @@
 	data-requestvisibleactions="http://schemas.google.com/AddActivity"
 	data-scope="https://www.googleapis.com/auth/plus.login"> </span> </span>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 	(function() {
 		var po = document.createElement('script');
 		po.type = 'text/javascript';
@@ -65,5 +65,5 @@
 			alert("not authorized yet press 'login with twitter' to signin ");
 		}
 	}
-</script>
+</script> -->
 {% endblock %}
