--- a/account_chooser_demo/demo/templates/demo/success_twitter.html
+++ b/account_chooser_demo/demo/templates/demo/success_twitter.html
@@ -1,2 +1,2 @@
-the key of the user coming form twitter {{ key }}
+the key of the user coming form twitter {{ key }} <hr>
 the secret of the user coming form twitter {{ secret }}
