rename share buttons for fb and gplus

--- a/account_chooser_demo/demo/templates/demo/index.html
+++ b/account_chooser_demo/demo/templates/demo/index.html
@@ -32,7 +32,7 @@
   data-calltoactionlabel="CREATE"
   data-calltoactionurl="http://plus.google.com/pages/create"
   data-calltoactiondeeplinkid="/pages/create">
-  Tell your friends
+  share on gplus
 </button>
 
 
@@ -42,7 +42,7 @@
     <p>
     <input type="button"
       onclick="sendRequestViaMultiFriendSelector(); return false;"
-      value="Send Request to Many Users with MFS"
+      value="invent your friends on FB"
     />
     </p>
     
