update keys for social media

--- a/account_chooser_demo/demo/templates/demo/index.html
+++ b/account_chooser_demo/demo/templates/demo/index.html
@@ -48,7 +48,7 @@
     
     <script>
       FB.init({
-        appId  : '422724461106816',
+        appId  : {{ FB_id }},
         frictionlessRequests: true
       });
       function sendRequestViaMultiFriendSelector() {
